feat: 更新 OAuth 认证逻辑，支持 GitHub 登录并调整相关配置；优化 run.sh 脚本以增强跨平台兼容性

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
         <div id="login-view" class="view active">
             <h1>浮生十梦</h1>
             <p>此乃试炼之地，请先表明身份。</p>
-            <a href="/api/login/linuxdo" class="login-button">使用 Linux.do 登录</a>
+            <a href="/api/login/github" class="login-button">使用 GitHub 登录</a>
             <p id="login-error" class="error-message"></p>
         </div>
 
